fixed horizontal scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ body{
     font-family: 'Work Sans', sans-serif;
     margin: 0;
     
+    
 }
 
 /* ---------------
@@ -39,7 +40,7 @@ li {
 a{
     text-decoration: none;
     color: #424242;
-    /* border: 10px solid transparent; */
+    border: 10px solid transparent;
 }
 a:hover{
     /* width: 20px; */
@@ -129,6 +130,7 @@ Image collage and text style
 Change in mobile device
 --------------- */
 .team-info{
+    width: 537px;
     position: relative;
     left: 73px;
 }
@@ -284,10 +286,10 @@ Sponser style
 /* --------------
 contact section style */
 .contact{
-    margin-left: ;
+    margin-top: 100px ;
     background-color: #FF900E;
     /* text-align: center; */
-    padding: ;
+    padding: 50px ;
 }
 .contact-us-text{
     margin-left: 100px;
@@ -296,14 +298,15 @@ contact section style */
     font-size: 36px;
     color: #FFFFFF;
     font-weight: 900;
-    padding-top: 50px;
+    padding-top: ;
 }
 .text-input{
-    margin-left: ;
+    
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
     justify-content: center;
+    
 
 }
 .text-input input, textarea, button{
@@ -315,6 +318,27 @@ contact section style */
 .submit{
     background: #fbc8c8;
     font-weight: 900;
+    padding-bottom: ;
+}
+/* -----------
+foooter style
+-------------- */
+.footer{
+    margin-left: 240px;
+    margin-right: 240px;
+    display: flex;
+    margin-top: 50px;
+    background-color: rgba(255, 182, 193, 0.438);
+    justify-content: center;
+    height: 100px;
+    border: none;
+    align-items: center;
+}
+.footer-text{
+    text-align: center;
+    font-weight: 700;
+    color: #727272;
+    color: 
 }
 /*-----------------
 Media queries
